# competitor-tracker

./: .gitignore  DEPLOYMENT.md  MANIFEST.in  README.md  competitor-tracker.sh  competitor_tracker.py  main.py  pyproject.toml  setup.py
.github/workflows/: publish.yml
