[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "competitor-tracker"
version = "1.0.0"
description = "AI company announcement tracker for competitive intelligence"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "OpenSeneca", email = "opensource@seneca.ai"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
competitor-tracker = "competitor_tracker:main"

[tool.setuptools]
packages = ["competitor_tracker"]

[tool.setuptools.package-data]
competitor_tracker = ["data/*.json", "data/*.yaml"]
